--- a/GET-POST/Shipper/HomeShipper/HomeShipper.storyboard
+++ b/GET-POST/Shipper/HomeShipper/HomeShipper.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gvX-iY-juv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gvX-iY-juv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,36 +17,13 @@
                     <view key="view" contentMode="scaleToFill" id="0bl-zA-7d7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Màn hình của hào " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKH-Wa-dvl">
-                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MKH-S3-dDm">
-                                <rect key="frame" x="327" y="637" width="48" height="30"/>
-                                <state key="normal" title="Logout"/>
-                                <connections>
-                                    <action selector="clickLogout:" destination="gvX-iY-juv" eventType="touchUpInside" id="WMZ-eC-Y5b"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="UKH-Wa-dvl" firstAttribute="width" secondItem="0bl-zA-7d7" secondAttribute="width" id="2Cv-UO-UeL"/>
-                            <constraint firstItem="UKH-Wa-dvl" firstAttribute="centerY" secondItem="ISo-pU-b3F" secondAttribute="centerY" id="Owq-bD-Slb"/>
-                            <constraint firstItem="ISo-pU-b3F" firstAttribute="bottom" secondItem="MKH-S3-dDm" secondAttribute="bottom" id="ZVm-Vi-zON"/>
-                            <constraint firstItem="ISo-pU-b3F" firstAttribute="trailing" secondItem="MKH-S3-dDm" secondAttribute="trailing" id="bgd-pk-nPC"/>
-                            <constraint firstItem="UKH-Wa-dvl" firstAttribute="height" secondItem="0bl-zA-7d7" secondAttribute="height" id="psB-FL-b4v"/>
-                            <constraint firstItem="UKH-Wa-dvl" firstAttribute="centerX" secondItem="ISo-pU-b3F" secondAttribute="centerX" id="yiA-JA-zko"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ISo-pU-b3F"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FzK-M3-lAb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="124" y="106"/>
+            <point key="canvasLocation" x="124" y="105.69715142428787"/>
         </scene>
     </scenes>
 </document>
