--- a/GET-POST/Shipper/HomeShop/CreateNewsItem/CreateNewsController.storyboard
+++ b/GET-POST/Shipper/HomeShop/CreateNewsItem/CreateNewsController.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-Ub-caG" userLabel="View1">
-                                <rect key="frame" x="0.0" y="20" width="375" height="577"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="557"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRH-oK-sHd" userLabel="ViewMap">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="577"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="557"/>
                                         <subviews>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JNO-d6-2tX">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="577"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="557"/>
                                             </mapView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -37,7 +37,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOf-KD-c8r">
-                                        <rect key="frame" x="305" y="472" width="50" height="50"/>
+                                        <rect key="frame" x="305" y="452" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="ZsR-KU-LGH"/>
                                             <constraint firstAttribute="width" constant="50" id="Zzb-Ih-kHO"/>
@@ -48,18 +48,18 @@
                                         </connections>
                                     </button>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Qvc-NK-R7S">
-                                        <rect key="frame" x="240" y="434" width="115" height="29"/>
+                                        <rect key="frame" x="240" y="414" width="115" height="29"/>
                                         <segments>
                                             <segment title="Bản đồ"/>
                                             <segment title="Vệ tinh"/>
                                         </segments>
                                         <color key="tintColor" red="0.01176470588" green="0.46666666670000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <action selector="clickSwitchMapTypeSegmented:" destination="jDb-eU-Lcf" eventType="valueChanged" id="bZ2-t2-Vhu"/>
+                                            <action selector="clickSwitchMapTypeSegmented:" destination="jDb-eU-Lcf" eventType="valueChanged" id="07W-Oe-o86"/>
                                         </connections>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyC-Ou-nVe" userLabel="ViewDangBai">
-                                        <rect key="frame" x="0.0" y="482" width="375" height="95"/>
+                                        <rect key="frame" x="0.0" y="462" width="375" height="95"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CZG-mh-YG0">
                                                 <rect key="frame" x="40" y="20" width="295" height="45"/>
@@ -118,7 +118,7 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="UzA-v9-lLk" firstAttribute="top" secondItem="cyC-Ou-nVe" secondAttribute="top" constant="5" id="21M-xy-MRW"/>
                                             <constraint firstItem="c1U-A8-FfS" firstAttribute="top" secondItem="cyC-Ou-nVe" secondAttribute="top" id="6cc-R3-oKe"/>
@@ -160,6 +160,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="YdT-oP-GPy" appends="YES" id="Po1-U9-oub"/>
+                                                </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Địa điểm Shipper giao hàng" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ho3-hT-ctx">
                                                 <rect key="frame" x="20" y="70.5" width="335" height="30"/>
@@ -167,6 +170,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="YuO-pW-pFe" appends="YES" id="A42-JZ-TqF"/>
+                                                </connections>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6y7-wk-2aK">
                                                 <rect key="frame" x="241" y="103.5" width="20" height="20"/>
@@ -291,21 +297,21 @@
                                     <constraint firstAttribute="trailing" secondItem="tOf-KD-c8r" secondAttribute="trailing" constant="20" id="WaG-qk-LHV"/>
                                     <constraint firstAttribute="trailing" secondItem="Qvc-NK-R7S" secondAttribute="trailing" constant="20" id="a8a-qz-ijw"/>
                                     <constraint firstItem="cyC-Ou-nVe" firstAttribute="leading" secondItem="MLi-Ub-caG" secondAttribute="leading" id="jMn-B4-03D"/>
+                                    <constraint firstAttribute="bottom" secondItem="cyC-Ou-nVe" secondAttribute="bottom" id="lDg-fY-iZX"/>
                                     <constraint firstItem="cyC-Ou-nVe" firstAttribute="top" secondItem="Qvc-NK-R7S" secondAttribute="bottom" constant="20" id="mMv-Jz-nLY"/>
                                     <constraint firstItem="cRH-oK-sHd" firstAttribute="leading" secondItem="MLi-Ub-caG" secondAttribute="leading" id="o96-n2-8w7"/>
                                     <constraint firstItem="WcZ-eq-NQV" firstAttribute="leading" secondItem="MLi-Ub-caG" secondAttribute="leading" id="tby-Ry-Smt"/>
-                                    <constraint firstAttribute="bottom" secondItem="cyC-Ou-nVe" secondAttribute="bottom" id="vyv-mm-7FQ"/>
                                     <constraint firstAttribute="trailing" secondItem="cyC-Ou-nVe" secondAttribute="trailing" id="x08-Ja-XtC"/>
                                     <constraint firstAttribute="bottom" secondItem="cRH-oK-sHd" secondAttribute="bottom" id="yPc-3F-Z86"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="5te-wd-oNo" firstAttribute="trailing" secondItem="MLi-Ub-caG" secondAttribute="trailing" id="OpO-Dd-1as"/>
                             <constraint firstItem="MLi-Ub-caG" firstAttribute="top" secondItem="5te-wd-oNo" secondAttribute="top" id="Uh5-uD-UNa"/>
                             <constraint firstItem="MLi-Ub-caG" firstAttribute="leading" secondItem="g9G-8E-DIs" secondAttribute="leading" id="cO3-bU-Xjm"/>
-                            <constraint firstAttribute="bottom" secondItem="MLi-Ub-caG" secondAttribute="bottom" constant="70" id="oeB-fa-Szm"/>
+                            <constraint firstAttribute="bottom" secondItem="MLi-Ub-caG" secondAttribute="bottom" constant="90" id="oeB-fa-Szm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5te-wd-oNo"/>
                     </view>
@@ -325,6 +331,16 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sSF-Lb-gG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="YdT-oP-GPy" userLabel="TapStartPoint">
+                    <connections>
+                        <action selector="tapstartPointTextField:" destination="jDb-eU-Lcf" id="hAA-9v-ZrI"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="YuO-pW-pFe" userLabel="TapLastPoint">
+                    <connections>
+                        <action selector="tapfinishPointTextField:" destination="jDb-eU-Lcf" id="Wda-kE-vIm"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="161" y="208"/>
         </scene>
