--- a/GET-POST/Shipper/HomeShop/TabBarHomeShop.storyboard
+++ b/GET-POST/Shipper/HomeShop/TabBarHomeShop.storyboard
@@ -13,10 +13,15 @@
         <scene sceneID="Sj8-RY-TOj">
             <objects>
                 <tabBarController storyboardIdentifier="TabBarHomeShop" id="yHo-WR-kAV" customClass="TabBarHomeShop" customModule="GET_POST" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hX1-99-ccu">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hX1-99-ccu" customClass="CustomTabBar" customModule="GET_POST" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="height">
+                                <real key="value" value="90"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </tabBar>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8AI-mm-Nfk" userLabel="First Responder" sceneMemberID="firstResponder"/>
