--- a/GET-POST/Shipper/HomeShop/CreateNewsItem/CreateNewsController.storyboard
+++ b/GET-POST/Shipper/HomeShop/CreateNewsItem/CreateNewsController.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-Ub-caG" userLabel="View1">
-                                <rect key="frame" x="0.0" y="20" width="375" height="557"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRH-oK-sHd" userLabel="ViewMap">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="557"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                         <subviews>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JNO-d6-2tX">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="557"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                             </mapView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -37,7 +37,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOf-KD-c8r">
-                                        <rect key="frame" x="305" y="452" width="50" height="50"/>
+                                        <rect key="frame" x="305" y="542" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="ZsR-KU-LGH"/>
                                             <constraint firstAttribute="width" constant="50" id="Zzb-Ih-kHO"/>
@@ -48,22 +48,22 @@
                                         </connections>
                                     </button>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Qvc-NK-R7S">
-                                        <rect key="frame" x="240" y="414" width="115" height="29"/>
+                                        <rect key="frame" x="240" y="504" width="115" height="29"/>
                                         <segments>
                                             <segment title="Bản đồ"/>
                                             <segment title="Vệ tinh"/>
                                         </segments>
-                                        <color key="tintColor" red="0.01176470588" green="0.46666666670000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="1" green="0.074509803921568626" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="clickSwitchMapTypeSegmented:" destination="jDb-eU-Lcf" eventType="valueChanged" id="07W-Oe-o86"/>
                                         </connections>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyC-Ou-nVe" userLabel="ViewDangBai">
-                                        <rect key="frame" x="0.0" y="462" width="375" height="95"/>
+                                        <rect key="frame" x="0.0" y="552" width="375" height="95"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CZG-mh-YG0">
                                                 <rect key="frame" x="40" y="20" width="295" height="45"/>
-                                                <color key="backgroundColor" red="0.01176470588" green="0.46666666670000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="0.30588235294117649" green="1" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="yEK-J3-sFM"/>
                                                 </constraints>
@@ -71,7 +71,7 @@
                                                     <attributedString key="attributedTitle">
                                                         <fragment content="Đăng bài">
                                                             <attributes>
-                                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <font key="NSFont" size="15" name="HelveticaNeue-Bold"/>
                                                             </attributes>
                                                         </fragment>
@@ -147,7 +147,7 @@
                                                 <attributedString key="attributedText">
                                                     <fragment content="Thông tin bài viết">
                                                         <attributes>
-                                                            <color key="NSColor" red="0.011764705882352941" green="0.46666666666666667" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="NSColor" red="1" green="0.074509803921568626" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <font key="NSFont" size="17" name="HelveticaNeue-Bold"/>
                                                         </attributes>
                                                     </fragment>
@@ -220,7 +220,7 @@
                                                 <attributedString key="attributedText">
                                                     <fragment content="VNĐ">
                                                         <attributes>
-                                                            <color key="NSColor" red="0.011764705882352941" green="0.46666666666666667" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="NSColor" red="1" green="0.074509803921568626" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <font key="NSFont" size="17" name="HelveticaNeue-Bold"/>
                                                         </attributes>
                                                     </fragment>
@@ -233,12 +233,12 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jMS-Z0-wcP">
+                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jMS-Z0-wcP">
                                                 <rect key="frame" x="307" y="140.5" width="36" height="30"/>
                                                 <attributedString key="attributedText">
                                                     <fragment content="VNĐ">
                                                         <attributes>
-                                                            <color key="NSColor" red="0.011764705882352941" green="0.46666666666666667" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="NSColor" red="1" green="0.074509803921568626" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <font key="NSFont" size="17" name="HelveticaNeue-Bold"/>
                                                         </attributes>
                                                     </fragment>
@@ -308,10 +308,10 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="MLi-Ub-caG" firstAttribute="bottom" secondItem="5te-wd-oNo" secondAttribute="bottom" id="5f9-u9-FYu"/>
+                            <constraint firstItem="MLi-Ub-caG" firstAttribute="top" secondItem="5te-wd-oNo" secondAttribute="top" id="HOQ-Ju-W6K"/>
                             <constraint firstItem="5te-wd-oNo" firstAttribute="trailing" secondItem="MLi-Ub-caG" secondAttribute="trailing" id="OpO-Dd-1as"/>
-                            <constraint firstItem="MLi-Ub-caG" firstAttribute="top" secondItem="5te-wd-oNo" secondAttribute="top" id="Uh5-uD-UNa"/>
                             <constraint firstItem="MLi-Ub-caG" firstAttribute="leading" secondItem="g9G-8E-DIs" secondAttribute="leading" id="cO3-bU-Xjm"/>
-                            <constraint firstAttribute="bottom" secondItem="MLi-Ub-caG" secondAttribute="bottom" constant="90" id="oeB-fa-Szm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5te-wd-oNo"/>
                     </view>
@@ -321,6 +321,9 @@
                         <outlet property="contentTextField" destination="hg1-PE-Xbe" id="D5Q-cc-b7K"/>
                         <outlet property="createItemButton" destination="tOf-KD-c8r" id="2HT-0O-aeQ"/>
                         <outlet property="finishPointTextField" destination="ho3-hT-ctx" id="Htj-Wl-E5n"/>
+                        <outlet property="lblInfoPostItem" destination="vAo-tj-HNZ" id="9eL-0n-uU4"/>
+                        <outlet property="lblVNDadvance" destination="jMS-Z0-wcP" id="2Ci-Br-QUQ"/>
+                        <outlet property="lblVNDprice" destination="uv5-Pt-LFs" id="v87-ne-XiE"/>
                         <outlet property="mapViewShop" destination="JNO-d6-2tX" id="Iqb-e4-05I"/>
                         <outlet property="prepayTextField" destination="gCr-1c-SYo" id="VaI-91-hLk"/>
                         <outlet property="priceTextField" destination="1uU-33-tLm" id="IwJ-GW-xwY"/>
